--- a/style.css
+++ b/style.css
@@ -127,13 +127,13 @@ dl, dt, dd, ol, ul, li {
 
 ::-moz-selection {
 	background: #1ABC9C; /* Firefox */
-	color: #FFF;
+	color: #ccccff;
 	text-shadow: none;
 }
 
 ::-webkit-selection {
 	background: #1ABC9C; /* Safari */
-	color: #FFF;
+	color: #ccccff;
 	text-shadow: none;
 }
 
@@ -275,7 +275,7 @@ small { font-family: 'Lato', sans-serif; }
 	float: none;
 	width: 100%;
 	margin: 0 auto;
-	background-color: #FFF;
+	background-color: #ccccff;
 	box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	-moz-box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	-webkit-box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -793,8 +793,8 @@ a.h-text-dark:hover {
 
 .gradient-light,
 .h-gradient-light:hover {
-	background-image: -webkit-linear-gradient(to top, #DDD 0%, #FFF 100%) !important;
-	background-image: linear-gradient(to top, #DDD 0%, #FFF 100%) !important;
+	background-image: -webkit-linear-gradient(to top, #DDD 0%, #ccccff 80%) !important;
+	background-image: linear-gradient(to top, #DDD 0%, #ccccff 80%) !important;
 }
 
 .gradient-grey-orange,
@@ -2678,7 +2678,7 @@ html[xmlns] .slider-wrap {
 	list-style: none;
 	z-index: -1;
 	line-height: 1.5;
-	background: #FFF;
+	background: #ccccff;
 	border: 0;
 	top: 100%;
 	left: -1px;
@@ -2864,7 +2864,7 @@ html[xmlns] .slider-wrap {
 
 #header-wrap {
 	position: relative;
-	background-color: #FFF;
+	background-color: #ccccff;
 	width: 100%;
 }
 
@@ -3074,7 +3074,7 @@ html[xmlns] .slider-wrap {
 		top: 0;
 		left: 0;
 		z-index: 299;
-		background-color: #FFF;
+		background-color: #ccccff;
 		border-bottom: 1px solid #EEE;
 		-webkit-transform: translateZ(0);
 		-webkit-backface-visibility: hidden;
@@ -3490,7 +3490,7 @@ body:not(.top-search-open) .top-search-parent #primary-menu-trigger {
 		left: 0 !important;
 		top: 0 !important;
 		padding: 35px 25px 60px !important;
-		background-color: #FFF;
+		background-color: #ccccff;
 		border-right: 1px solid #EEE !important;
 		overflow-y: scroll;
 		-webkit-overflow-scrolling: touch;
@@ -3621,7 +3621,7 @@ body:not(.top-search-open) .top-search-parent #primary-menu-trigger {
 		position: absolute;
 		visibility: hidden;
 		width: 220px;
-		background-color: #FFF;
+		background-color: #ccccff;
 		box-shadow: 0px 13px 42px 11px rgba(0, 0, 0, 0.05);
 		border: 1px solid #EEE;
 		border-top: 2px solid #1ABC9C;
@@ -7595,7 +7595,7 @@ body:not(.device-touch) .entry-link {
 	.postcontent .post-timeline .entry-timeline {
 		display: block;
 		border: 3px solid #CCC;
-		background-color: #FFF;
+		background-color: #ccccff;
 		padding-top: 10px;
 		text-indent: 0;
 		top: 20px;
@@ -11523,7 +11523,7 @@ body:not(.device-touch) .clients-grid .grid-item a {
 .team-desc { text-align: center; }
 
 .team-desc.team-desc-bg {
-	background-color: #FFF;
+	background-color: #ccc0ff;
 	padding: 10px 0 30px;
 }
 
